--- a/src/main/resources/assets/romaniansdelight/lang/en_us.json
+++ b/src/main/resources/assets/romaniansdelight/lang/en_us.json
@@ -1,7 +1,12 @@
 {
+  "itemGroup.romaniansdelight_tab": "Romanian's Delight",
   "item.romaniansdelight.raw_mici": "Raw Mici",
   "item.romaniansdelight.cooked_mici": "Cooked Mici",
-  "itemGroup.romaniansdelight_tab": "Romanian's Delight",
+  "item.romaniansdelight.grill": "Grill",
+  "item.romaniansdelight.corn_flour": "Corn Flour",
+    "item.romaniansdelight.mamaliga": "Polenta",
+
   "block.romaniansdelight.grill": "Grill",
-  "item.romaniansdelight.grill": "Grill"
+  "block.romaniansdelight.mamaliga": "Polenta"
+
 }
