add mamaliga recipes

--- a/src/main/resources/assets/romaniansdelight/lang/en_us.json
+++ b/src/main/resources/assets/romaniansdelight/lang/en_us.json
@@ -4,7 +4,8 @@
   "item.romaniansdelight.cooked_mici": "Cooked Mici",
   "item.romaniansdelight.grill": "Grill",
   "item.romaniansdelight.corn_flour": "Corn Flour",
-    "item.romaniansdelight.mamaliga": "Polenta",
+  "item.romaniansdelight.mamaliga": "Polenta",
+  "item.romaniansdelight.mamaliga_serving": "Polenta Portion",
 
   "block.romaniansdelight.grill": "Grill",
   "block.romaniansdelight.mamaliga": "Polenta"
