add soups, move registries

--- a/src/main/resources/assets/romaniansdelight/lang/en_us.json
+++ b/src/main/resources/assets/romaniansdelight/lang/en_us.json
@@ -6,6 +6,8 @@
   "item.romaniansdelight.corn_flour": "Corn Flour",
   "item.romaniansdelight.mamaliga": "Polenta",
   "item.romaniansdelight.mamaliga_serving": "Polenta Portion",
+  "item.romaniansdelight.radauti_soup": "Radauti Soup",
+  "item.romaniansdelight.tripe_soup": "Tripe Soup",
 
   "block.romaniansdelight.grill": "Grill",
   "block.romaniansdelight.mamaliga": "Polenta"
