--- a/src/main/resources/assets/romaniansdelight/lang/en_us.json
+++ b/src/main/resources/assets/romaniansdelight/lang/en_us.json
@@ -8,6 +8,8 @@
   "item.romaniansdelight.mamaliga_serving": "Polenta Portion",
   "item.romaniansdelight.radauti_soup": "Radauti Soup",
   "item.romaniansdelight.tripe_soup": "Tripe Soup",
+  "item.romaniansdelight.salad_boeuf": "Salad d'Boeuf",
+  "item.romaniansdelight.mayonnaise": "Mayonnaise",
 
   "block.romaniansdelight.grill": "Grill",
   "block.romaniansdelight.mamaliga": "Polenta"
