--- a/src/main/resources/assets/romaniansdelight/lang/en_us.json
+++ b/src/main/resources/assets/romaniansdelight/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.romaniansdelight.tripe_soup": "Tripe Soup",
   "item.romaniansdelight.salad_boeuf": "Salad d'Boeuf",
   "item.romaniansdelight.mayonnaise": "Mayonnaise",
+  "item.romaniansdelight.sarmale": "Sarma",
 
   "block.romaniansdelight.grill": "Grill",
   "block.romaniansdelight.mamaliga": "Polenta"
